# Firmware-Security-Inspector-FSI-

./: CMakeLists.txt  LICENSE  README.md
firmware-security-inspector/src/asm/: cpuid.asm  rdtsc.asm
firmware-security-inspector/src/c/: memory.c  pcie.c  registers.c  secureboot.c  smbios.c
firmware-security-inspector/src/cli/: cli_main.c
firmware-security-inspector/src/gui/: main.cpp  mainwindow.cpp  mainwindow.h
firmware-security-inspector/src/gui/widgets/: acpi_widget.h  cpu_widget.cpp  dashboard_widget.h  firmware_widget.cpp  hex_viewer.h  msr_widget.cpp  registers_widget.cpp  secureboot_widget.h  smbios_widget.cpp
firmware-security-inspector/src/modules/: acpi.h  cpu.c  cpu.h  firmware.h  memory.c  msr.h  secureboot.h  security_audit.h  smbios.c  tpm.c
firmware-security-inspector/src/platform/: windows_platform.h
firmware-security-inspector/src/report/: report.c  report.h  report_json.c
firmware-security-inspector/src/snapshot/: snapshot.h
firmware-security-inspector/uefi/: FsiUefi.c
src/asm/: msr.asm  registers.asm
src/c/: firmware.c  msr.c  tpm.c
src/gui/widgets/: acpi_widget.cpp  cpu_widget.h  dashboard_widget.cpp  developer_widget.cpp  developer_widget.h  firmware_widget.h  hex_viewer.cpp  memory_widget.cpp  memory_widget.h  msr_widget.h  pcie_widget.cpp  pcie_widget.h  registers_widget.h  secureboot_widget.cpp  security_audit_widget.cpp  security_audit_widget.h  smbios_widget.h  tpm_widget.cpp  tpm_widget.h
src/modules/: acpi.c  firmware.c  memory.h  msr.c  pcie.c  pcie.h  registers.c  registers.h  secureboot.c  security_audit.c  smbios.h  tpm.h
src/platform/: windows_platform.c
src/report/: report_html.c  report_txt.c
src/snapshot/: snapshot.c  snapshot_diff.c
tests/: test_cpuid.c  test_security_audit.c
uefi/: FsiUefi.inf
